@@ -1,3 +1,6 @@
+2017-01-14 (0.12.9)
+	COMMON: python style here-document
+
 2017-01-01 (0.12.9)
 	ANDROID: select alternative font
 
